# mos-quantum-learning

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
audit/: FOLLOW_UPS.md  SUMMARY.md  ab_regime.md  average_case.md  bent.md  gate_noise.md  k_sparse.md  noise_sweep.md  scaling.md  soundness.md  soundness_multi.md  theta_sensitivity.md  truncation.md
docs/: conf.py  harness.rst  index.rst  prover.rst  sampler.rst  verifier.rst
experiments/: DCS_BATCH_COMPUTE.md  EXPERIMENT_GAP_ANALYSIS.md  EXPERIMENT_TRACKER.md  FINDINGS.md  GATE_NOISE_PLAN.md  PRESENTATION_PLAN.md  RERUN_PLAN.md  agent1_completeness_findings.md  agent2_soundness_findings.md  agent3_robustness_findings.md  agent4_sensitivity_findings.md  decode.py  harness.py
mos/: __init__.py  mos_simulator.py  sampler.py
notebooks/: main.ipynb  mos_demo.ipynb
ql/: prover.py  verifier.py
results/: ab_regime_4_16_100.pb  average_case_4_16_100.pb  bent_16_30.json  bent_4_16_100.pb  gate_noise_4_8_50.pb  k_sparse_4_16_100.pb  noise_sweep_4_16_100.pb  scaling_16_30.json  scaling_4_16_100.pb  scaling_4_16_24.pb  soundness_4_20_100.pb  soundness_4_20_50.pb  soundness_multi_4_16_100.pb  theta_sensitivity_4_16_100.pb  truncation_10_10_100.pb  truncation_11_11_100.pb  truncation_12_12_100.pb  truncation_13_13_100.pb  truncation_14_14_100.pb  truncation_4_4_100.pb  truncation_5_5_100.pb  truncation_6_6_100.pb  truncation_7_7_100.pb  truncation_8_8_100.pb  truncation_9_9_100.pb
tests/: decode_test.py  harness_test.py  mos_state_test.py  prover_test.py  quantum_fourier_sampler_test.py  sharding_test.py  (+1 more)
(+55 files in other folders)
