[project]
name = "cs310-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.45.0",
    "protobuf>=5.29.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest-xdist>=3.8.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.11",
]
